op.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: builder
  labels:
    app: builder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: builder
  template:
    metadata:
      labels:
        app: builder
    spec:
      containers:
      - name: dind
        image: docker:dind
        args:
          - "--host=tcp://0.0.0.0:2375"
          - "--host=unix:///var/run/docker.sock"
          - "--insecure-registry=192.168.49.2:5000"
        securityContext:
          privileged: true
---
apiVersion: v1
kind: Service
metadata:
  name: builder
spec:
  selector:
    app: builder
  ports:
  - protocol: TCP
    port: 2375
    targetPort: 2375
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-ingress
  annotations:
spec:
  rules:
  - host: gitea-local # FOR BROWSER
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http # ClusterIP
            port:
              number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-local
  labels:
    app: gitea
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: gitea
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-ingress
  annotations:
spec:
  rules:
  - host: drone-local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drone
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: drone-local
  labels:
    app: drone
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: drone
    app.kubernetes.io/name: drone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  labels:
    app.kubernetes.io/name: drone-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone-runner
    spec:
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
spec:
  rules:
  - host: prometheus-stack-grafana # 和service name一致
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana # ClusterIP
            port:
              number: 80
